# responsibility-pathway-engineering

./: AGENTS.md  AUTHORS.md  AUTHORSHIP.md  BEACON.md  CHANGELOG.md  CITATION.cff  LICENSE  LUMINALIA.md  NOTICE.md  OPEN_CONSTRUCTION.md  README.ja.md  README.md  READMEforAI.md  ROADMAP.md  SECURITY.md  lakefile.lean  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md
docs/: 2026-07-01-evening-operation-sync-note.md  2026-07-02-morning-sync.md  academic-paper-restart-boundary.md  action-class-matrix.md  adapter-boundary.md  agent-mode-autonomous-dev-trial-note.md  ai-agent-operation-patterns.md  ai-assisted-construction-note.md  ai-assurance-implementation-map.md  ai-judgment-node-task-control.md  api-future-shape-status-note.md  api-future-shape.md  approval-gate.md  assistant-pathway-maintenance-checklist.md  beacon-html-catalog-sync-note.md  canonical-release-and-distribution-sequencing-policy-v0.1.md  checker-coverage.md  connector-target-matrix-connection.md  connector-target-matrix.md  contract-compatibility-policy.md  corda-custom-agent.md  critical-review-response.md  current-task-inventory.md  current-work-parallel-plan.md  decision-owner.md  deferred-cleanup-inventory-items.md  deferred-cleanup-inventory-note.md  deferred-work-restart-conditions.md  definition.md  development-cadence-and-public-question-boundary.md  development-process.md  document-redundancy-review-findings-checker-plans.md  document-redundancy-review-findings-examples.md  document-redundancy-review-findings-focused-connections.md  (+138 more)
examples/: action-class-matrix-minimal.yaml  (+15 more)
(+174 files in other folders)
